--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="donate_money">Donate Money</string>
     <string name="call">Call</string>
     <string name="home">Home</string>
+    <string name="donate_bold">Donate Bold</string>
+    <string name="donate_time">Donate Time</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
