Time without integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,7 +55,7 @@
     <string name="title_activity_maps">Map</string>
     <string name="your_location">Your Location</string>
     <string name="don_t_have_an_id">Don`t have an id?</string>
-    <string name="get_id_her">Get ID her</string>
+    <string name="get_id_her">Get One here</string>
     <string name="time">Time</string>
     <string name="for_volunteers_only">For volunteers Only</string>
     <string name="incorrect_id">Incorrect ID</string>
